<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manager.DetailWageMonthStaffInMangerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/imgBackWageStaffDetailsManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luong"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_foreground"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/textViewHoVaTen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Huyen Nguyen"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/textViewViTri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Quan ly" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chiTiet"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="4dp"
            android:drawableLeft="@drawable/ic_info_outline_24dp"
            android:background="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/boder"
            android:layout_margin="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soBuoiLam"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="32dp"
                    />
                <TextView
                    android:id="@+id/txtSoBuoiLam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:gravity="right"
                    android:layout_margin="32dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luongTheoThang"
                    android:layout_marginLeft="32dp"
                    />
                <TextView
                    android:id="@+id/txtLuongTheoThang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:gravity="right"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:drawableRight="@drawable/ic_attach_money_24dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/boder"
            android:layout_margin="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tienThuong"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="32dp"
                    />
                <TextView
                    android:id="@+id/txtTienThuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:gravity="right"
                    android:layout_margin="32dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tienPhat"
                    android:layout_marginLeft="32dp"
                    />
                <TextView
                    android:id="@+id/txtTienPhat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:gravity="right"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luongThucTra"
                    android:layout_marginLeft="32dp"
                    />
                <TextView
                    android:id="@+id/txtLuongThucTe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:gravity="right"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>