<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manager.WageMonthlyManagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luong"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >
            <TextView
                android:id="@+id/txtHangThang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/hangThang"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="4dp"
                android:background="@color/lightGreen"
                android:textColor="@color/white"
                android:padding="8dp"
                />
            <TextView
                android:id="@+id/txtThietLapLuong"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/thietLapLuong"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:background="@color/silver"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearHangThang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recMonthManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_month"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/linearListStaff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chiTiet"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:padding="4dp"
                    android:drawableLeft="@drawable/ic_info_outline_24dp"
                    android:background="@color/colorPrimary"
                    />

                <EditText
                    android:id="@+id/edtTimKiemChiTietNhanVien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_search_24dp"
                    android:background="@color/silver"
                    android:padding="4dp"
                    android:layout_margin="16dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewStaff"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_staff"
                    />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frameThietlapLuong"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="bottom"
                >
                <TextView
                    android:id="@+id/txtThuong"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thuong"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="4dp"
                    android:background="@color/lightGreen"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    />
                <TextView
                    android:id="@+id/txtPhat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phat"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:background="@color/silver"
                    />
                <TextView
                    android:id="@+id/txtLuong"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/luong"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:background="@color/silver"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/linearQuanLyNhanVienThuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >
                    <EditText
                        android:id="@+id/edtTimKiemCaiDatNhanVienThuong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_search_24dp"
                        android:background="@color/silver"
                        android:padding="4dp"
                        android:layout_margin="16dp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewQuanLyNhanVienThuong"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_staff_set_salary"
                        android:layout_marginBottom="64dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearQuanLyNhanVienPhat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <EditText
                        android:id="@+id/edtTimKiemCaiDatNhanVienPhat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_search_24dp"
                        android:background="@color/silver"
                        android:padding="4dp"
                        android:layout_margin="16dp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewQuanLyNhanVienPhat"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_staff_set_salary"
                        android:layout_marginBottom="64dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearQuanLyNhanVienLuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <EditText
                        android:id="@+id/edtTimKiemCaiDatNhanVienLuong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_search_24dp"
                        android:background="@color/silver"
                        android:padding="4dp"
                        android:layout_margin="16dp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewQuanLyNhanVienLuong"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_staff_set_salary"
                        android:layout_marginBottom="64dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</FrameLayout>